# Delibird

./: .gitignore  CMakeLists.txt  Makefile  README.md  deploy  gameboy_bulk_messages  get_delibird_tests  install_and_run  log_team2.txt  run  tall-grass-builder  undeploy
Broker/: CMakeLists.txt  Makefile  broker.config
Broker/include/: best_fit_available_partition_search_algorithm.h  broker_deserialization.h  broker_logs_manager.h  broker_memory_algorithms.h  broker_memory_manager.h  broker_message_allocator.h  broker_signal_handler.h  buddy_system_message_allocator.h  cache_information_builder.h  connection_handler.h  deserialization_information_content_provider.h  dynamic_partition_memory_manager.h  dynamic_partition_message_allocator.h  fifo_free_partition_algorithm.h  fifo_partition_free_algorithm.h  first_fit_available_partition_search_algorithm.h  first_fit_search_parition_algorithm.h  first_fit_search_partition_algorithm.h  free_broker.h  initialize_signal_broker_handler.h  lru_partition_free_algorithm.h  main_thread_executor.h  memory_compaction_algorithm.h  message_role_identifier.h  messages_roles.h  publish_message_mode.h  publisher.h  publisher_message_mode.h  queue_context_operations.h  queue_context_provider.h  queue_message_manager.h  queue_message_status.h  subscriber.h  subscriber_context_provider.h  subscriber_message_mode.h  subscribers_manager.h
Broker/src/: best_fit_available_partition_search_algorithm.c  broker.c  broker_deserialization.c  broker_logs_manager.c  broker_memory_algorithms.c  broker_memory_manager.c  broker_message_allocator.c  broker_sanitizer.c  broker_signal_handler.c  buddy_system_message_allocator.c  cache_information_builder.c  connection_handler.c  deserialization_information_content_provider.c  dynamic_partition_memory_manager.c  dynamic_partition_message_allocator.c  fifo_free_partition_algorithm.c  fifo_partition_free_algorithm.c  first_fit_available_partition_search_algorithm.c  first_fit_search_parition_algorithm.c  first_fit_search_partition_algorithm.c  free_broker.c  initialize_signal_broker_handler.c  lru_partition_free_algorithm.c  main_thread_executor.c  memory_compaction_algorithm.c  message_role_identifier.c  messages_roles.c  publish_message_mode.c  publisher.c  publisher_message_mode.c  queue_context_operations.c  queue_context_provider.c  queue_message_manager.c  queue_message_status.c  subscriber.c  subscriber_context_provider.c  subscriber_message_mode.c  subscribers_manager.c
GameBoy/: CMakeLists.txt
GameBoy/include/: entry_point_validator.h
GameBoy/src/: entry_point_validator.c  gameboy.c
Gameboy/: CMakeLists.txt  Makefile  gameboy.config
Gameboy/include/: appeared_pokemon_operation_parser.h  catch_pokemon_operation_parser.h  caught_pokemon_operation_parser.h  entry_point_connection_builder.h  entry_point_logs_manager.h  entry_point_processes_information.h  entry_point_validator.h  free_gameboy.h  get_pokemon_operation_parser.h  new_pokemon_operation_parser.h  pokemon_operation_parser.h  role_mode_strategy.h
Gameboy/src/: appeared_pokemon_operation_parser.c  catch_pokemon_operation_parser.c  caught_pokemon_operation_parser.c  entry_point_connection_builder.c  entry_point_executor.c  entry_point_logs_manager.c  entry_point_processes_information.c  entry_point_validator.c  free_gameboy.c  gameboy.c  gameboy_sanitizer.c  get_pokemon_operation_parser.c  new_pokemon_operation_parser.c  pokemon_operation_parser.c  publisher_mode_strategy.c  role_mode_strategy.c  subscriber_mode_strategy.c
Team/: CMakeLists.txt  Makefile  team-RR.config  team-SJF-CD.config  team.config
Team/include/: appeared_query_performer.h  basic_sjf_scheduling_algorithm_behaviour.h  benefitial_exchanges_for_both_parties.h  benefitial_exchanges_only_for_first_party.h  benefitial_exchanges_only_for_second_party.h  benefitial_trades_for_both_parties.h  benefitial_trades_only_for_first_party.h  benefitial_trades_only_for_second_party.h  broker_connection_handler.h  catch_action.h  caught_query_performer.h  deadlock_detecter.h  deadlock_detection_and_recovery_algorithm.h  deadlock_solver.h  dispatcher.h  dispatcher_queues.h  dispatching_reasons.h  distance_calculator.h  event_notifier.h  exchange_action.h  exchange_provider.h  exchanges_inferrer.h  fifo_scheduling_algorithm.h  free_team.h  gameboy_connection_handler.h  goal_calculator.h  identified_exchanges_provider.h  identified_trades_provider.h  localized_query_performer.h  main_threads_executor.h  map.h  map_update_trigger.h  matrix_update_trigger.h  metrics.h  movement_action.h  non_benefitial_exchange.h  non_benefitial_trade.h  non_preemptive_sjf_scheduling_algorithm.h  pokemon_occurrence_trigger.h  pokemon_occurrences.h  (+24 more)
Team/logs/: log_team1.txt
Team/src/: appeared_query_performer.c  basic_sjf_scheduling_algorithm_behaviour.c  benefitial_exchanges_for_both_parties.c  benefitial_exchanges_only_for_first_party.c  benefitial_exchanges_only_for_second_party.c  benefitial_trades_for_both_parties.c  benefitial_trades_only_for_first_party.c  benefitial_trades_only_for_second_party.c  broker_connection_handler.c  catch_action.c  caught_query_performer.c  deadlock_detecter.c  deadlock_detection_and_recovery_algorithm.c  deadlock_solver.c  dispatcher.c  dispatcher_queues.c  dispatching_reasons.c  distance_calculator.c  event_notifier.c  exchange_action.c  exchange_provider.c  exchanges_inferrer.c  fifo_scheduling_algorithm.c  free_team.c  gameboy_connection_handler.c  goal_calculator.c  goal_calculator.h  identified_exchanges_provider.c  identified_trades_provider.c  localized_query_performer.c  main_threads_executor.c  map.c  map_update_trigger.c  matrix_update_trigger.c  metrics.c  movement_action.c  non_benefitial_exchange.c  non_benefitial_trade.c  non_preemptive_sjf_scheduling_algorithm.c  pokemon_occurrence_trigger.c  (+28 more)
Utils/: CMakeLists.txt  Makefile
Utils/include/: chained_evaluation.h  common_structures.h  configuration_manager.h  free_system.h  garbage_collector.h  general_logs.h  handle.h  logger.h  matrix.h  operation_deserialization.h  operation_serialization.h  paths.h  (+11 more)
(+78 files in other folders)
