add_library(entry_point_validator src/entry_point_validator.c include/entry_point_validator.h)
add_library(entry_point_connection_builder src/entry_point_connection_builder.c include/entry_point_connection_builder.h)
add_library(entry_point_logs_manager src/entry_point_logs_manager.c include/entry_point_logs_manager.h)

target_link_libraries(entry_point_logs_manager common_structures entry_point_validator logger)
target_link_libraries(entry_point_validator common_structures processes_information entry_point_logs_manager -lcommons)
target_link_libraries(entry_point_connection_builder common_structures entry_point_validator configuration_manager -lcommons)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/target")
add_executable(gameboy src/gameboy.c)

target_link_libraries(gameboy entry_point_validator entry_point_connection_builder entry_point_logs_manager sockets)
